--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -1,8 +1,9 @@
 .site-header {
-  // height: 6rem;
-  // width: 100%;
-  // position: fixed;
-  // top: 0;
-  // background-color: var(--color-light);
-  // padding-inline: var(--gutter);
+  --region-space-top: var(--space-xs-s);
+  --region-space-bottom: var(--space-xs-s);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: var(--color-light);
 }
