--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,4 +1,4 @@
-<a href="#main" class="skip-link">{{ metadata.skipContent }}</a>
+<a href="#article" class="skip-link">{{ metadata.skipContent }}</a>
 <header class="region | site-header">
   <div class="sidebar | ontop">
     <a class="display" href="/" tabindex="-1" style="text-decoration: none">{{ metadata.title }}</a>
