--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     {% include 'partials/header.html' %}
-    <main id="main">{{ content }}</main>
+    <main>{{ content }}</main>
     {% include 'partials/footer.html' %}
   </body>
 </html>
