--- a/src/assets/sass/blocks/_page-header.scss
+++ b/src/assets/sass/blocks/_page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
   --wrapper-max-width: 60rem;
-  // margin-top: 6rem;
+  padding-bottom: var(--space-s-m);
+  margin-top: var(--space-l-xl);
 }
