--- a/src/assets/sass/compositions/_sidebar.scss
+++ b/src/assets/sass/compositions/_sidebar.scss
@@ -2,15 +2,14 @@
   display: flex;
   flex-wrap: wrap;
   gap: var(--space-s-l);
-  align-items: baseline;
-}
-
-.sidebar > :first-child {
-  flex-basis: 10rem;
-  flex-grow: 1;
+  align-items: center;
 }
 
 .sidebar > :last-child {
+  flex-grow: 1;
+}
+
+.sidebar > :first-child {
   flex-basis: 0;
   flex-grow: 999;
   min-width: 50%;
