--- a/src/includes/partials/menu.html
+++ b/src/includes/partials/menu.html
@@ -8,17 +8,30 @@
         {% if currentPage == item.url %}aria-current="page"{% endif %}>
         {{ item.title }}
         </a>
-      </li> 
+    </li> 
     {% endfor %}
+    <li>Search</li>
   </ul>
 </nav>
 
 <template id="burger-template">
-    <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
-      <span class="display">Menu</span>
-      <svg width="24" height="24" aria-hidden="true">
-        <path d="M12 5V19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        <path d="M5 12H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
-    </button>
-  </template>
+  <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
+    <span class="display">Menu</span>
+    <svg width="24" height="24" aria-hidden="true">
+      <path
+        d="M12 5V19"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+      <path
+        d="M5 12H19"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+  </button>
+</template>
