--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -90,6 +90,7 @@ summary {
   padding-inline: var(--gutter);
   margin-top: var(--space-l-xl);
   background-color: var(--color-light);
+  font-size: var(--step--1);
   h2 {
     display: inline-block;
     font-size: var(--step-0);
@@ -117,6 +118,7 @@ summary {
     padding-block: var(--space-xs-s);
     margin-top: var(--space-l-xl);
     background-color: var(--color-light);
+    font-size: var(--step--1);
     h2 {
       display: inline-block;
       font-size: var(--step-0);
