--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -96,6 +96,23 @@ summary {
     font-size: var(--step-0);
     font-weight: bold;
   }
+  a:is(:hover, :focus) {
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    padding: 0.25rem;
+    margin: -0.25rem;
+    text-decoration: none;
+  }
+  [aria-current="page"] {
+    color: var(--color-light);
+    background-color: var(--color-dark);
+    padding: 0.25rem;
+    margin: -0.25rem;
+    text-decoration: none;
+  }
+  [aria-current="page"]:focus {
+    outline: double var(--color-dark) 0.5rem;
+  }
 }
 
 .content {
