details toggled to open when current page exists in its list

--- a/src/includes/partials/aside.html
+++ b/src/includes/partials/aside.html
@@ -2,7 +2,7 @@
 
 <aside class="region | menu">
   <nav>
-    <details open="">
+    <details>
       <summary><h2>Tutorial</h2></summary>
       <ul>
         {% for item in navigation.docs.tutorial %}
@@ -10,7 +10,7 @@
         {% endfor %}
       </ul>
     </details>
-    <details open="">
+    <details>
       <summary><h2>How-to</h2></summary>
       <ul>
         {% for item in navigation.docs.howTo %}
@@ -18,7 +18,7 @@
         {% endfor %}
       </ul>
     </details>
-    <details open="">
+    <details>
       <summary><h2>Reference</h2></summary>
       <ul>
         {% for item in navigation.docs.reference %}
@@ -26,7 +26,7 @@
         {% endfor %}
       </ul>
     </details>
-    <details open="">
+    <details>
       <summary><h2>Explanation</h2></summary>
       <ul>
         {% for item in navigation.docs.explanation %}
