--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -1,4 +1,6 @@
+@forward "./breadcrumb";
 @forward "./callout";
+@forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
 @forward "./menu";
