--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -12,6 +12,7 @@
     <meta name="theme-color" content="#000" />
     <link rel="icon" href="{{ '/assets/images/favicon.svg' | url }}" type="image/svg+xml" />
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}" />
+    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet" />
     <link
       rel="preload"
       href="{{ '/assets/fonts/AUTHENTICSans-90.woff' | url }}"
