--- a/src/assets/sass/blocks/_site-footer.scss
+++ b/src/assets/sass/blocks/_site-footer.scss
@@ -1,4 +1,6 @@
 .site-footer {
-  --region-space-top: var(--space-s-m);
-  --region-space-bottom: var(--space-s-m);
+  --region-space-top: var(--space-m);
+  --region-space-bottom: var(--space-m);
+  --wrapper-max-width: 60rem;
+  padding-inline: var(--gutter);
 }
