--- a/src/assets/sass/blocks/_skip-link.scss
+++ b/src/assets/sass/blocks/_skip-link.scss
@@ -17,7 +17,7 @@
   width: auto;
   background-color: var(--color-dark);
   color: var(--color-light);
-  padding: var(--space-s-m);
+  padding: var(--space-s);
   line-height: 1;
 }
 
