--- a/src/assets/sass/utilities/_region.scss
+++ b/src/assets/sass/utilities/_region.scss
@@ -1,4 +1,4 @@
 .region {
-  padding-top: var(--region-space-top, var(--space-m-l));
-  padding-bottom: var(--region-space-bottom, var(--space-m-l));
+  padding-top: var(--region-space-top, var(--space-l));
+  padding-bottom: var(--region-space-bottom, var(--space-l));
 }
