--- a/src/layouts/base.html
+++ b/src/layouts/base.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      {% if page.url == '/' %} {{ metadata.title }} {% else %} {{ title }} | {{ metadata.title }} {%
-      endif %}
+      {% if page.url == '/' %} {{ metadata.title }} {% else %} {{ title }} | {{
+      metadata.title }} {% endif %}
     </title>
     <meta name="description" content="{{ description or metadata.description }}" />
     <meta name="generator" content="{{ eleventy.generator }}" />
     <meta name="theme-color" content="#000" />
-    <link rel="icon" href="{{ '/assets/images/favicon.svg' | url }}" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="{{ '/assets/images/favicon.svg' | url }}"
+      type="image/svg+xml"
+    />
     <link rel="stylesheet" href="{{ '/assets/css/style.css' | url }}" />
-    <link href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css" rel="stylesheet" />
+    <link
+      href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"
+      rel="stylesheet"
+    />
     <link
       rel="preload"
       href="{{ '/assets/fonts/AUTHENTICSans-90.woff' | url }}"
@@ -27,7 +34,7 @@
       type="font/woff"
       crossorigin
     />
-    <script type="module" src="/assets/scripts/app.js" defer></script>
+    <script type="module" src="{{ '/assets/scripts/app.js' }}" defer></script>
   </head>
   <body>
     {% include 'partials/header.html' %}
