--- a/src/assets/sass/utilities/_wrapper.scss
+++ b/src/assets/sass/utilities/_wrapper.scss
@@ -1,7 +1,4 @@
 .wrapper {
   max-width: var(--wrapper-max-width, 90ch);
-  // padding-left: var(--space-2xs);
-  // padding-right: var(--space-2xs);
-  margin-left: auto;
-  margin-right: auto;
+  margin-inline: auto;
 }
