--- a/src/includes/partials/aside.html
+++ b/src/includes/partials/aside.html
@@ -4,7 +4,7 @@
   <nav>
     <details>
       <summary><h2>Tutorial</h2></summary>
-      <ul>
+      <ul role="list">
         {% for item in navigation.docs.tutorial %}
         <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
         {% endfor %}
@@ -12,7 +12,7 @@
     </details>
     <details>
       <summary><h2>How-to</h2></summary>
-      <ul>
+      <ul role="list">
         {% for item in navigation.docs.howTo %}
         <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
         {% endfor %}
@@ -20,7 +20,7 @@
     </details>
     <details>
       <summary><h2>Reference</h2></summary>
-      <ul>
+      <ul role="list">
         {% for item in navigation.docs.reference %}
         <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
         {% endfor %}
@@ -28,16 +28,19 @@
     </details>
     <details>
       <summary><h2>Explanation</h2></summary>
-      <ul>
+      <ul role="list">
         {% for item in navigation.docs.explanation %}
         <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
         {% endfor %}
       </ul>
     </details>
-    <ul>
-      {% for item in navigation.docs.faq %}
-      <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
-      {% endfor %}
-    </ul>
+    <details>
+      <summary><h2>FAQ</h2></summary>
+      <ul role="list">
+        {% for item in navigation.docs.faq %}
+        <li><a href="{{ item.url }}" {% if currentPage == item.url %}aria-current="page"{% endif %}>{{ item.title }}</a></li>
+        {% endfor %}
+      </ul>
+    </details>
   </nav>
 </aside>
