--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -4,12 +4,23 @@ layout: base.html
 
 {% include 'partials/aside.html' %}
 <article id="article" class="region | content">
-  <header class="wrapper | page-header">
+  <header class="wrapper | flow | page-header">
+    {% if breadcrumbs %}
+    <ul class="breadcrumb" role="list">
+      {% for item in breadcrumbs %}
+      <li>
+        {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}
+        {{item.title }}{% endif %}
+      </li>
+      {% endfor %}
+      <li>{{ title }}</li>
+    </ul>
+    {% endif %}
     <h1>{{ title }}</h1>
   </header>
   <article class="wrapper | flow | prose">
     {% if overview %}
     <p>{{ overview }}</p>
-    {% endif %}{{ content }}
+    {% endif %} {{ content }}
   </article>
 </article>
