--- a/src/assets/sass/blocks/_index.scss
+++ b/src/assets/sass/blocks/_index.scss
@@ -1,9 +1,9 @@
 @forward "./breadcrumb";
 @forward "./callout";
+@forward "./code";
 @forward "./heading-anchor";
 @forward "./page-header";
 @forward "./prose";
 @forward "./menu";
 @forward "./site-header";
-@forward "./site-footer";
 @forward "./skip-link";
