--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -1,36 +1,29 @@
 <a href="#article" class="skip-link">{{ metadata.skipContent }}</a>
 
-<header class="region | site-header | ontop">
-  <nav class="navbar" role="primary">
+<header class="region | site-header">
+  <nav role="primary">
     <div class="logo"><a href="/" tabindex="-1">{{ metadata.title }}</a></div>
-    <div>
-      <p>Search</p>
-      <!-- <template id="burger-template"> -->
-      <button
-        type="button"
-        aria-expanded="false"
-        aria-label="Menu"
-        aria-controls="mainnav"
-      >
-        <span class="display">Menu</span>
-        <svg width="24" height="24" aria-hidden="true">
-          <path
-            d="M12 5V19"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M5 12H19"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
-      </button>
-      <!-- </template> -->
-    </div>
+    <p>Search</p>
   </nav>
+  <!-- <template id="burger-template">
+    <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
+      <span class="display">Menu</span>
+      <svg width="24" height="24" aria-hidden="true">
+        <path
+          d="M12 5V19"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+        <path
+          d="M5 12H19"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        />
+      </svg>
+    </button>
+  </template> -->
 </header>
