--- a/src/assets/sass/blocks/_site-header.scss
+++ b/src/assets/sass/blocks/_site-header.scss
@@ -15,9 +15,9 @@
 
 .logo {
   display: flex;
-  flex-basis: 18rem;
+  // flex-basis: 18rem;
   flex-grow: 1;
-  flex-shrink: 0;
+  // flex-shrink: 0;
   a {
     text-decoration: none;
   }
