--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -17,7 +17,10 @@ footer {
 
 footer {
   text-align: center;
-  margin-inline: 18rem;
+  --region-space-top: var(--space-m);
+  --region-space-bottom: var(--space-m);
+  --wrapper-max-width: 60rem;
+  padding-inline: var(--gutter);
 }
 
 h1 {
@@ -65,7 +68,7 @@ a:is(:hover, :focus) {
 
 a:not([href*="11ty-docs-prototype.com/"]):not([href^="#"]):not([href^="/"]):after {
   display: inline-block;
-  width: 1em;
+  width: 1.25em;
   height: 1em;
   background-image: url("/assets/images/external-link.svg");
   background-repeat: no-repeat;
@@ -75,7 +78,12 @@ a:not([href*="11ty-docs-prototype.com/"]):not([href^="#"]):not([href^="/"]):afte
   content: "(external link)";
   overflow: hidden;
   white-space: nowrap;
-  text-indent: 1em; /* the width of the icon */
+  text-indent: 1.25em; /* the width of the icon */
+}
+
+hr {
+  border: none;
+  border-top: solid 0.1rem var(--color-dark);
 }
 
 summary {
@@ -117,8 +125,45 @@ summary {
   [aria-current="page"]:focus {
     outline: double var(--color-dark) 0.5rem;
   }
+
+  // Todo: switch to postcss + autoprefixer
+
+  details {
+    summary {
+      list-style: none;
+    }
+    ul {
+      list-style: none;
+      padding-inline: var(--space-m);
+      padding-block: var(--space-3xs-2xs);
+    }
+    summary::-webkit-details-marker {
+      display: none;
+    }
+    summary::before {
+      display: inline-block;
+      width: 1.65em;
+      height: 1em;
+      background-image: url("/assets/images/plus.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: 60% auto;
+      // alternative text rules
+      content: "(details list marker)";
+      overflow: hidden;
+      white-space: nowrap;
+      text-indent: 1.65em; // the width of the icon
+    }
+  }
+
+  details[open] {
+    summary::before {
+      background-image: url("/assets/images/minus.svg");
+    }
+  }
 }
 
+// Todo: margin on home page
 .content {
   @media (min-width: 60rem) {
     margin-inline-start: 18rem;
@@ -127,24 +172,6 @@ summary {
     margin-inline-end: 18rem;
   }
 }
-
-// .content {
-//   --wrapper-max-width: 75rem;
-//   display: grid;
-//   grid-template-columns:
-//     1fr
-//     min(60ch, 100%)
-//     1fr;
-// }
-
-// .content > * {
-//   grid-column: 2;
-// }
-
-// .content .breakout {
-//   width: 100%;
-//   grid-column: 1 / 4;
-// }
 
 .table-of-contents {
   @media (min-width: 80rem) {
@@ -166,42 +193,6 @@ summary {
     ol {
       margin-top: 0;
     }
-  }
-}
-
-// Todo: switch to postcss + autoprefixer because Safari is trash
-
-details {
-  summary {
-    list-style: none;
-  }
-  ul {
-    list-style: none;
-    padding-inline: var(--space-m);
-    padding-block: var(--space-3xs-2xs);
-  }
-  summary::-webkit-details-marker {
-    display: none;
-  }
-  summary::before {
-    display: inline-block;
-    width: 1.65em;
-    height: 1em;
-    background-image: url("/assets/images/plus.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 60% auto;
-    // alternative text rules
-    content: "(details list marker)";
-    overflow: hidden;
-    white-space: nowrap;
-    text-indent: 1.65em; // the width of the icon
-  }
-}
-
-details[open] {
-  summary::before {
-    background-image: url("/assets/images/minus.svg");
   }
 }
 
