--- a/src/includes/partials/footer.html
+++ b/src/includes/partials/footer.html
@@ -1,3 +1,3 @@
-<footer class="wrapper | region | site-footer">
+<footer class="wrapper | region">
   <p>&copy; {{ '' | getFullYear }}</p>
 </footer>
