--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -10,11 +10,6 @@ body {
   font-size: var(--step-0);
 }
 
-header,
-footer {
-  padding-inline: var(--gutter);
-}
-
 footer {
   text-align: center;
   --region-space-top: var(--space-m);
@@ -90,6 +85,10 @@ summary {
   cursor: pointer;
 }
 
+img {
+  border-radius: var(--border-radius);
+}
+
 .menu {
   @media (max-width: 60rem) {
     display: none;
@@ -100,7 +99,7 @@ summary {
   bottom: 0;
   width: 18rem;
   padding-inline: var(--gutter);
-  margin-top: var(--space-xl);
+  margin-block-start: var(--space-xl);
   background-color: var(--color-light);
   font-size: var(--step--1);
   h2 {
@@ -171,6 +170,10 @@ summary {
   @media (min-width: 80rem) {
     margin-inline-end: 18rem;
   }
+}
+
+.content.home {
+  margin-inline: auto;
 }
 
 .table-of-contents {
