--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -2,9 +2,7 @@
 layout: base.html
 ---
 
-{% include 'partials/aside.html' %}
-
-<article id="article" class="region | content">
+<article id="article" class="region | content | home">
   <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
   <article class="wrapper | flow | prose">
     {{ content }}
