--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -13,7 +13,7 @@ layout: base.html
         {{item.title }}{% endif %}
       </li>
       {% endfor %}
-      <li>{{ title }}</li>
+      <li><a href="{{ page.url }}">{{ title }}</a></li>
     </ul>
     {% endif %}
     <h1>{{ title }}</h1>
