--- a/src/assets/sass/_settings.scss
+++ b/src/assets/sass/_settings.scss
@@ -14,7 +14,7 @@
   --font-display: AlteHaas, Helvetica, Arial, sans-serif;
   --font-base: Authentic, Helvetica, Arial, sans-serif;
   --font-base-bold: AuthenticBold, Helvetica, Arial, sans-serif;
-  --font-mono: monospace;
+  --font-mono: Fira, monospace;
 
   --border-radius: 0.25rem;
   --measure: 60ch;
