--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -3,7 +3,7 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url('/assets/fonts/AUTHENTICSans-90.woff');
+  src: url("/assets/fonts/AUTHENTICSans-90.woff");
 }
 
 @font-face {
@@ -11,5 +11,13 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  src: url('/assets/fonts/AUTHENTICSans-130.woff');
+  src: url("/assets/fonts/AUTHENTICSans-130.woff");
+}
+
+@font-face {
+  font-family: Fira;
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+  src: url("/assets/fonts/FiraMono-Regular.ttf");
 }
