--- a/src/includes/partials/header.html
+++ b/src/includes/partials/header.html
@@ -2,28 +2,7 @@
 
 <header class="region | site-header">
   <nav role="primary">
-    <div class="logo"><a href="/" tabindex="-1">{{ metadata.title }}</a></div>
+    <div class="logo"><a href="/">{{ metadata.title }}</a></div>
     <p>Search</p>
   </nav>
-  <!-- <template id="burger-template">
-    <button type="button" aria-expanded="false" aria-label="Menu" aria-controls="mainnav">
-      <span class="display">Menu</span>
-      <svg width="24" height="24" aria-hidden="true">
-        <path
-          d="M12 5V19"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <path
-          d="M5 12H19"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-    </button>
-  </template> -->
 </header>
