--- a/src/layouts/home.html
+++ b/src/layouts/home.html
@@ -2,12 +2,12 @@
 layout: base.html
 ---
 
-<article id="article" class="region | content | home">
-  {% include 'partials/aside.html' %}
+{% include 'partials/aside.html' %}
+<article id="article" class="region | content">
   <header class="wrapper | flow | page-header"><h1>{{ title }}</h1></header>
   <article class="wrapper | flow | prose">
     {{ content }}
-    <article class="grid">
+    <div class="grid">
       {% for item in navigation.docs %}
       <ul class="docs-box">
         <li>
@@ -20,7 +20,7 @@ layout: base.html
         </li>
       </ul>
       {% endfor %}
-    </article>
+    </div>
     {% include 'partials/help.html' %}
   </article>
 </article>
