--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -2,16 +2,13 @@
 layout: base.html
 ---
 
+{% include 'partials/aside.html' %}
 <article id="article" class="region | content">
-  {% include 'partials/aside.html' %}
   <header class="wrapper | flow | page-header">
     {% if breadcrumbs %}
     <ul class="breadcrumb" role="list">
       {% for item in breadcrumbs %}
-      <li>
-        {% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %}
-        {{item.title }}{% endif %}
-      </li>
+      <li>{% if item.url %}<a href="{{ item.url }}">{{ item.title }}</a>{% else %} {{item.title }}{% endif %}</li>
       {% endfor %}
       <li><a href="{{ page.url }}">{{ title }}</a></li>
     </ul>
@@ -21,6 +18,6 @@ layout: base.html
   <article class="wrapper | flow | prose">
     {% if overview %}
     <p>{{ overview }}</p>
-    {% endif %} {{ content }} {% include 'partials/help.html' %}
+    {% endif %} {{ this.page | log }} {{ content }} {% include 'partials/help.html' %}
   </article>
 </article>
